--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,3 @@
 #e.g. http://localhost:8000
 #example value also used to build the local docker container, not ideal
-REACT_APP_BACKEND_DOMAIN='http://localhost:8000'
+REACT_APP_BACKEND_DOMAIN=http://localhost:8000
